--- a/Assignment1_testProject.vcxproj.filters
+++ b/Assignment1_testProject.vcxproj.filters
@@ -15,96 +15,96 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\body.cpp">
+    <ClCompile Include="cyclone\body.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\collide_coarse.cpp">
+    <ClCompile Include="cyclone\collide_coarse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\collide_fine.cpp">
+    <ClCompile Include="cyclone\collide_fine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\contacts.cpp">
+    <ClCompile Include="cyclone\contacts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\core.cpp">
+    <ClCompile Include="cyclone\core.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\fgen.cpp">
+    <ClCompile Include="cyclone\fgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\joints.cpp">
+    <ClCompile Include="cyclone\joints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\particle.cpp">
+    <ClCompile Include="cyclone\particle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\pcontacts.cpp">
+    <ClCompile Include="cyclone\pcontacts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\pfgen.cpp">
+    <ClCompile Include="cyclone\pfgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\plinks.cpp">
+    <ClCompile Include="cyclone\plinks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\pworld.cpp">
+    <ClCompile Include="cyclone\pworld.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\random.cpp">
+    <ClCompile Include="cyclone\random.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\src\world.cpp">
+    <ClCompile Include="cyclone\world.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\body.h">
+    <ClInclude Include="include\cyclone\body.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\collide_coarse.h">
+    <ClInclude Include="include\cyclone\collide_coarse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\collide_fine.h">
+    <ClInclude Include="include\cyclone\collide_fine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\contacts.h">
+    <ClInclude Include="include\cyclone\contacts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\core.h">
+    <ClInclude Include="include\cyclone\core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\cyclone.h">
+    <ClInclude Include="include\cyclone\cyclone.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\fgen.h">
+    <ClInclude Include="include\cyclone\fgen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\joints.h">
+    <ClInclude Include="include\cyclone\joints.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\particle.h">
+    <ClInclude Include="include\cyclone\particle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\pcontacts.h">
+    <ClInclude Include="include\cyclone\pcontacts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\pfgen.h">
+    <ClInclude Include="include\cyclone\pfgen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\plinks.h">
+    <ClInclude Include="include\cyclone\plinks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\precision.h">
+    <ClInclude Include="include\cyclone\precision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\pworld.h">
+    <ClInclude Include="include\cyclone\pworld.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\random.h">
+    <ClInclude Include="include\cyclone\random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\HBO\jaar_4\Advanced_Physics\cyclone-physics-master\include\cyclone\world.h">
+    <ClInclude Include="include\cyclone\world.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
