--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -10,57 +10,24 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="cyclone\body.cpp" />
-    <ClCompile Include="cyclone\collide_coarse.cpp" />
-    <ClCompile Include="cyclone\collide_fine.cpp" />
-    <ClCompile Include="cyclone\contacts.cpp" />
-    <ClCompile Include="cyclone\core.cpp" />
-    <ClCompile Include="cyclone\fgen.cpp" />
-    <ClCompile Include="cyclone\joints.cpp" />
-    <ClCompile Include="cyclone\particle.cpp" />
-    <ClCompile Include="cyclone\pcontacts.cpp" />
-    <ClCompile Include="cyclone\pfgen.cpp" />
-    <ClCompile Include="cyclone\plinks.cpp" />
-    <ClCompile Include="cyclone\pworld.cpp" />
-    <ClCompile Include="cyclone\random.cpp" />
-    <ClCompile Include="cyclone\world.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="include\cyclone\body.h" />
-    <ClInclude Include="include\cyclone\collide_coarse.h" />
-    <ClInclude Include="include\cyclone\collide_fine.h" />
-    <ClInclude Include="include\cyclone\contacts.h" />
-    <ClInclude Include="include\cyclone\core.h" />
-    <ClInclude Include="include\cyclone\cyclone.h" />
-    <ClInclude Include="include\cyclone\fgen.h" />
-    <ClInclude Include="include\cyclone\joints.h" />
-    <ClInclude Include="include\cyclone\particle.h" />
-    <ClInclude Include="include\cyclone\pcontacts.h" />
-    <ClInclude Include="include\cyclone\pfgen.h" />
-    <ClInclude Include="include\cyclone\plinks.h" />
-    <ClInclude Include="include\cyclone\precision.h" />
-    <ClInclude Include="include\cyclone\pworld.h" />
-    <ClInclude Include="include\cyclone\random.h" />
-    <ClInclude Include="include\cyclone\world.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{19B85BFC-806D-4A1D-8EAB-E7DFED9A8BE9}</ProjectGuid>
-    <RootNamespace>Assignment1_testProject</RootNamespace>
+    <ProjectGuid>{6640FD6B-940E-4587-A39A-47CDF4CCC029}</ProjectGuid>
+    <Keyword>Win32Proj</Keyword>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -72,33 +39,48 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <LinkIncremental>true</LinkIncremental>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LinkIncremental>false</LinkIncremental>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(SolutionDir)$(Configuration)\Assignment1_testProject.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Thomas\Documents\HBO\jaar 4\Advanced Physics\Assignment1\cyclone-physics-master\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
