Solved stash merge conflict

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -79,6 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\cyclone-physics\src\demos\bridge\bridge.cpp" />
     <ClCompile Include="..\utils\app.cpp" />
     <ClCompile Include="..\utils\main.cpp" />
     <ClCompile Include="..\utils\timing.cpp" />
